--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "file-saver": "^1.3.8",
-    "ical-generator": "^0.2.10",
+    "ical-generator": "^1.15.3",
     "jquery": "^3.3.1",
-    "moment": "^2.22.1"
+    "moment": "^2.22.1",
+    "moment-timezone": "^0.5.32"
   }
 }
